applet can not run

--- a/CoreJava/BasicKnowledge/src/main/java/com/charpter2/WelcomeApplet.html
+++ b/CoreJava/BasicKnowledge/src/main/java/com/charpter2/WelcomeApplet.html
@@ -12,6 +12,9 @@
 		by <em>Cay Horstmann</em> and <em>Gary Cornell</em>
 		published by Sun Microsystems Press.
 	</p>
+	<applet code="WelcomeApplet.class" width="400" height="200">
+		<param name="greeting" value="Hello World!"/>
+	</applet>
 	<hr/>
 	
 </body>
